@@ -1,3 +1,9 @@
+2008-05-27  Richard Guenther  <rguenther@suse.de>
+
+	PR tree-optimization/36339
+	* gcc.c-torture/execute/pr36339.c: New testcase.
+	* gcc.dg/tree-ssa/loadpre8.c: XFAIL.
+
 2008-05-27  Alexandre Oliva  <aoliva@redhat.com>
 
 	PR c++/35909
